# Zygisk-FontLoader

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  logging.h  main.cpp  misc.cpp  misc.h  mountinfo.cpp  mountinfo.hpp  zygisk.hpp
module/src/main/res/values/: strings.xml
template/magisk_module/: customize.sh  post-fs-data.sh  util_functions.sh
